--- a/views/tema5.ejs
+++ b/views/tema5.ejs
@@ -33,12 +33,12 @@
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> 
-            <p>se utiliza para evaluar una expresión condicional: si se cumple la condición (es verdadera), ejecutará un bloque de código. Si es falsa, es posible ejecutar otras sentencias.</p> 
+            <p>Es una subrutina que consiste generalmente de una serie de sentencias para llevar a cabo una acción, un juego de parámetros de entrada que regularán dicha acción o, posiblemente, un valor de salida (o valor de retorno) de algún tipo.</p> 
         <strong > <h4>. Descripción</h4> </strong>
         <br>
         <div class="row">
             <div class="col-sm-12 ">
-                <p> Se utiliza con la palabra reservada if, else, elsif y end. Para iniciar la estructura se coloca el if seguido de la condición que se evaluará, si solo pondremos una linea de codigo no es necesario colocar end al final del codigo que comprenderá la estructura, el else se utiliza para colocar el codigo que se ejecura si la condición da como resultado false.</p> </div>
+                <p> Para definir un método se inicia con la palabra reservada def seguido del nombre del metodo (si el metodo requiere parametros estos se definen despues del nombre y entre parentesis) al final del codigo del metodo se coloca end que denota el final de este, para llamar un metodo se puede hacer solo escribiendo su nombre.</p> </div>
                 <h5><strong>Ejemplo</strong>  </h5>
                 <br>
             </div>
@@ -48,13 +48,13 @@
             <div class="col-sm-6 ">
                 
                 <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/selectivas1.png"  alt="Imagen">
+                <img class="img-fluid " src="img/metodo1.png"  alt="Imagen">
             </div>
            
             <div class="col-sm-6">
                 
                 <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/selectivas2.png" alt="Imagen">
+                <img class="img-fluid" src="img/metodo2.png" alt="Imagen">
             </div>
            
            
@@ -74,10 +74,10 @@
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> 
-            <p>es cualquier construcción de programa que repite una sentencia o secuencia de sentencias un número de veces. La sentencia o grupo de sentencias que se repite en un bloque se denomina cuerpo del ciclo y cada repetición del cuerpo del ciclo se llama iteración del ciclo. Un ciclo while tiene una condición del ciclo, una expresión lógica que controla la secuencia de repetición. La posición de esta condición del ciclo es delante del cuerpo del ciclo y significa que un ciclo while es un ciclo de preverificación de modo que cuando se ejecuta el mismo, se evalúa la condición antes de que se ejecute el cuerpo del ciclo.</p> 
+            <p> es una agrupación de datos (variables o campos) y de funciones (métodos) que operan sobre esos datos. A estos datos y funciones pertenecientes a una clase se les denominan variables y métodos o funciones miembro. La Programación Orientada a Objetos se basa en la programación de clases.</p> 
             
         <strong > <h4>. Descripción</h4> </strong>
-        <p> La estructura basica es while, expresion y end. While va precedido de una expresion la cual se evaluara por cada iteración y si el resultado da verdadero vuelve a ejecutar el codigo que contiene la estructura hasta donde aparece la instrucción end. </p> </div>
+        <p> Las clases se inician con la palabra reservada class  seguida de un nombre el cual debe iniciar con mayusculas, luego se colocan las varibles y métodos de la clase y se finaliza con la instrucción con end. Una vez creada la clase se pueden empezar a definir objetos a partir de ella. </p> </div>
    <br>
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -90,13 +90,13 @@
             <div class="col-sm-6 ">
                 
                 <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/iterativa1.png"  alt="Imagen">
+                <img class="img-fluid " src="img/clase1.png"  alt="Imagen">
             </div>
            
             <div class="col-sm-6">
                 
                 <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/iterativa2.png" alt="Imagen">
+                <img class="img-fluid" src="img/clase2.png" alt="Imagen">
             </div>
            
            
@@ -121,13 +121,13 @@
                
         <div class="col-sm-6 ">
             
-            <div class="text-light ">SELECTIVAS</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1a9cDRLOvlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+            <div class="text-light ">METODOS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/Iw8PvVYrUEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
         </div>
        
         <div class="col-sm-6">
-            <div class="text-light ">ITERATIVAS</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/VYCCdaVwtmk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+            <div class="text-light ">CLASES</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/xrySyRjAtz8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
         </div>
        
      
